--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "ixudra/curl": "^6.16",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "tymon/jwt-auth": "dev-develop"
+        "tymon/jwt-auth": "dev-develop",
+        "uxweb/sweet-alert": "^1.4"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
