--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
         "jquery": "^3.2",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
-        "vue": "^2.5.7"
+        "vue": "^2.5.7",
+        "webpack-cli": "^3.0.2"
     },
     "dependencies": {
-        "vue-router": "^3.0.1"
+        "node-sass": "^4.9.0",
+        "vue-router": "^3.0.1",
+        "webpack": "^4.11.0"
     }
 }
