--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "ixudra/curl": "^6.16",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "tymon/jwt-auth": "dev-develop",
         "uxweb/sweet-alert": "^1.4"
     },
